# GhostCheck

./: .gitignore  README.md
backend/: .gitignore  Cargo.toml
backend/src/: gh_auth.rs  main.rs  routes.rs  sessions.rs  signer.rs
backend/src/db/: mod.rs  sessions.rs
backend/src/gh_api/: dev_badge_api.rs  mod.rs  repo_badge_api.rs
backend/src/models/: api_models.rs  auth_models.rs  mod.rs
frontend/: .gitignore  Cargo.toml  index.html
frontend/js/: solana.js
frontend/src/: app.rs  main.rs
frontend/src/components/: footer.rs  navbar.rs
frontend/src/pages/: connect.rs  dashboard.rs  landing.rs  mod.rs  profile.rs
frontend/src/services/: api.rs  mod.rs  solana.rs  wallet.rs
frontend/style/: main.css
frontend/test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
frontend/test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1771250424314806  MANIFEST-000021
ghost_check/: .gitignore  Anchor.toml  logs.txt  package-lock.json  package.json  txtx.yml
ghost_check/app/: package-lock.json  package.json
ghost_check/programs/ghost_check/: Cargo.toml
ghost_check/programs/ghost_check/src/: errors.rs  lib.rs  state.rs
ghost_check/programs/ghost_check/src/instructions/: dev_badge.rs  helper.rs  init_config.rs  mod.rs  repo_badge.rs  update_dev_badge.rs  update_repo_badge.rs  verify_dev.rs  verify_proof.rs  vouch_for_dev.rs
ghost_check/runbooks/: README.md
ghost_check/runbooks/deployment/: main.tx
ghost_check/tests/: ghost_check.ts
images/frontend_images/: README.md
