[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
dotenv = "0.15.0"
ed25519-dalek = "2.2.0"
futures = "0.3.31"
hex = "0.4.3"
once_cell = "1.21.3"
rand = "0.9.2"
reqwest = { version = "0.13.2", features = ["form", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["full"] }
urlencoding = "2.1.3"
