[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
axum = "0.8.8"
chrono = "0.4.43"
dotenv = "0.15.0"
ed25519-dalek = "2.2.0"
futures = "0.3.31"
hex = "0.4.3"
once_cell = "1.21.3"
rand = "0.9.2"
reqwest = { version = "0.13.2", features = ["form", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
urlencoding = "2.1.3"
uuid = { version = "1.20.0", features = ["v4"] }
