[package]
name = "ghostcheck-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
console_log = "1.0.0"
gloo-net = "0.6.0"
js-sys = "0.3.85"
leptos = { version = "0.8.15", features = ["csr"] }
leptos_meta = "0.8.5"
leptos_router = "0.8.11"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
web-sys = { version = "0.3.85", features = ["RequestCredentials", "Window"] }
